# market-scan

./: .replit  README.md  app.py  pyproject.toml  replit.md
.streamlit/: config.toml
modules/: analyzer.py  data_manager.py  scraper.py  visualizer.py
pages/: competitor_analysis.py  dashboard.py  pricing_comparison.py  trend_analytics.py
utils/: helpers.py
